--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -1,6 +1,6 @@
 [config.wallpaper]
 command = "swww"
-arguments = ["img", "--transition-type", "center"]
+arguments = ["img", "-t", "grow", "--transition-pos", "0.75,0.6"]
 set = true
 
 [templates.waybar]
