nvim/kitty: change cont size based on task

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,10 @@
 # Font
 font_family      JetBrains Mono Nerd Font
-# font_size 11.0
+font_size 10.0
+
+# Nvim font change
+allow_remote_control yes
+listen_on unix:/tmp/mykitty
 
 # Cursor
 # cursor_shape beam
