--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,8 @@
 # Font
-font_family      JetBrains Mono Nerd Font
+font_family      FiraCode Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 font_size 10.0
 
 # Nvim font change
